--- a/docs/team/evelynejuliet.adoc
+++ b/docs/team/evelynejuliet.adoc
@@ -96,4 +96,6 @@ include::../DeveloperGuide.adoc[tag=templateundoredofeature]
 include::../DeveloperGuide.adoc[tag=remindermanualtesting]
 
 === Not included: Undo Redo Manual Testing.
-Please refer to Developer Guide for more details.
+Please refer to Developer Guide
+(https://github.com/AY1920S1-CS2103-F10-2/main/blob/master/docs/DeveloperGuide.adoc#undo-redo-manual-testing[DG])
+for more details.
