--- a/docs/team/TSAI-HSIAO-HAN.adoc
+++ b/docs/team/TSAI-HSIAO-HAN.adoc
@@ -88,7 +88,7 @@ Improved current `delete` command so that when a bookmark been deleted it's remi
 This part is about the sections I contributed to the User Guide.
 The section extracted from the User Guide below showcase my ability to write a formal document to our target users.
 
-_------------- This is the start of extraction -------------_
+_------------- This is the start of the excerpt -------------_
 include::../UserGuide.adoc[tag=ReminderCommand]
 include::../UserGuide.adoc[tag=sort]
 
