--- a/docs/team/mauricetxs.adoc
+++ b/docs/team/mauricetxs.adoc
@@ -29,6 +29,7 @@ This symbol indicates important information.
 
 `suggest` A grey highlight (called a mark-up) indicates that this is a command that can be inputted into the command line and executed by the application.
 
+{empty} +
 
 == Summary of contributions
 
