--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -255,8 +255,7 @@ Removes a specific deadline into the deadline list. The list on the right-side p
 * Removes the deadline at the specified `INDEX` from the list. The index refers to the index number shown in the displayed deadline list on the right-sde pane. The index *must be a positive integer* 1, 2, 3, ...
 ****
 
-NOTE: When a deadline of re-test questions is removed, the list of questions will still be stored in the specific date.
-To remove questions, refer to _____
+CAUTION: When a deadline of re-test questions is removed, the list of questions will still be stored in the specific date.
 
 === Show monthly calendar with all deadlines: `calendar`
 
@@ -266,7 +265,7 @@ Shows the calendar filled with all deadlines in the month. The calendar will be 
 
 The calendar will pop up, seen below.
 
-image::calendar.png[width="600"]
+image::calendar.png[width="400", height="500"]
 
 NOTE: Calendar does not show the specific deadline names, but an overview of all your deadlines for the month ahead.
 
@@ -290,13 +289,13 @@ You can refer to the example below:
 
 Key the above mentioned into the command box
 
-image::BadFlashcard.png[width="600"]
+image::BadFlashcard.png[width="550"]
 
 The command will add the 2nd flashcard on the list, "How to declare a pointer in C?" as a 'bad' flashcard.
 After which, the result box will show the success message.
 A new deadline will now be shown at the right side-bar, 3 days later from the day it was entered.
 
-image::BadFlashcardAdded.png[width="600"]
+image::BadFlashcardAdded.png[width="550"]
 
 NOTE: Bad Questions will be added to a deadline which is due 3 days later. This is an approximated value that based on
 the theory of https://en.wikipedia.org/wiki/Spaced_repetition[Spaced Repetition], referring to Ebbinghaus Forgetting Curve by Hermann Ebbinghaus who hypothesised this theory in 1985.
@@ -304,10 +303,6 @@ the theory of https://en.wikipedia.org/wiki/Spaced_repetition[Spaced Repetition]
 === List all "Bad" FlashCards for a specific date `bad d>DATE`
 
 List all the "Bad" rated FlashCards from a specific date. The FlashCard Questions will be shown.
-
-`listbad d>12/11/2019`
-
-You can refer to the example below:
 
 `listbad d>12/11/2019`
 
@@ -319,13 +314,11 @@ NOTE: The automated test mode for the "Bad" FlashCards is not functional at this
 
 === Remove a specific "Bad" FlashCard for a specific date `bad d>DATE i>INDEX`
 
-You can remove a specific "Bad" rated FlashCard from the list
+You can remove a specific "Bad" rated `FlashCard` from the list
 
 `removebad d>12/11/2019 i>2`
 
-You can refer to the example below:
-
-`removebad d>12/11/2019 i>2`
+You can refer to the example above.
 
 As seen from before, after listing all the "Bad" rated FlashCards for a specific date using `listbad d>12/11/2019`, you can observe the full list as seen below.
 
@@ -333,13 +326,13 @@ image::listbad.png[width="600"]
 
 Afterwards, you can choose to remove as specific "Bad" rated FlashCard from that list. Using the example `removebad d>12/11/2019 i>2`, you can observe this.
 
-image::removebad.png[width="600"]
+image::removebad.png[width="550"]
 
 Once removed, a success message will be shown!
 
-image::removebadsuccess.png[width="600"]
+image::removebadsuccess.png[width="550"]
 
-CAUTION: Using the Remove Deadline command to remove a "ToDo: Bad Questions" Deadline does not remove all the "Bad" FlashCards stored for that date.
+CAUTION: Using the `remove` command to remove a "ToDo: Bad Questions" Deadline does not remove all the "Bad" `FlashCard` stored for that date.
 
 //end::badflashcard[]
 
